--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
         <link rel="stylesheet" href="assets/css/styles.css" />
     </head>
     <body>
-        <p>test</p>
+        <header class="header">
+            <div class="container">
+                <a href="/">
+                    <div class="logo">
+                        <span class="logo__circle"></span>
+                        <span class="logo__text">
+                            <span class="logo__branch">shine</span>
+                            <span class="logo__branch logo__branch--small">
+                                smile
+                            </span>
+                        </span>
+                    </div>
+                </a>
+            </div>
+        </header>
     </body>
 </html>
