--- a/index.html
+++ b/index.html
@@ -99,17 +99,47 @@
     <body>
         <header class="header">
             <div class="container">
-                <a href="/">
-                    <div class="logo">
-                        <span class="logo__circle"></span>
-                        <span class="logo__text">
-                            <span class="logo__branch">shine</span>
-                            <span class="logo__branch logo__branch--small">
-                                smile
+
+
+                <div class="header-top">
+                    <a href="/">
+                        <div class="logo">
+                            <span class="logo__circle"></span>
+                            <span class="logo__text">
+                                <span class="logo__branch">shine</span>
+                                <span class="logo__branch logo__branch--small">
+                                    smile
+                                </span>
                             </span>
-                        </span>
+                        </div>
+                    </a>
+
+                    <!-- Nav-Bar -->
+
+                    <nav class="nav-bar">
+                        <ul class="nav-bar__list">
+                            <li class="nav-bar__item">
+                                <a href="#!" class="nav-bar__link nav-bar__active">Home</a>
+                            </li>
+                            <li class="nav-bar__item">
+                                <a href="#!" class="nav-bar__link">Services</a>
+                            </li>
+                            <li class="nav-bar__item">
+                                <a href="#!" class="nav-bar__link">About</a>
+                            </li>
+                            <li class="nav-bar__item">
+                                <a href="#!" class="nav-bar__link">Doctors</a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <!-- Action -->
+
+                    <div class="action">
+                        <a href="#!" class="action-btn">Log In</a>
+                        <a href="#!" class="btn action-btn">Sign Up</a>
                     </div>
-                </a>
+                </div >
             </div>
         </header>
     </body>
