--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <header class="header">
             <div class="container">
 
-
+                <!-- Header Top -->
                 <div class="header-top">
                     <a href="/">
                         <div class="logo">
@@ -135,11 +135,36 @@
 
                     <!-- Action -->
 
-                    <div class="action">
-                        <a href="#!" class="action-btn">Log In</a>
-                        <a href="#!" class="btn action-btn">Sign Up</a>
+                    <div class="header-action">
+                        <a href="#!" class="header-action__login">Log In</a>
+                        <a href="#!" class="btn header-action__signup">Sign Up</a>
                     </div>
                 </div >
+
+                <!-- Hero -->
+
+                <section class="hero">
+                    <!-- Hero-content -->
+
+                    <section class="hero__content">
+                        <h1 class="hero__content--title">Exceptional dental care for all ages.</h1>
+                        <p class="hero__content--info p__large">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+                        <div class="hero__content--action">
+                            <a href="#!" class="btn hero__content--action__btn">Book Online</a>
+                            <span class="action__tel font--white">or call (123) 456-7890</span>
+                        </div >
+                     </section>
+
+                    <!-- Hero media -->
+
+                    <div class="hero__media">
+                        <figure class="hero__images">
+                            <img src="./assets/img/hero-1.svg" alt="Exceptional dental care for all ages." class="hero__media--img1">
+                            <img src="./assets/img/hero-2.svg" alt="Exceptional dental care for all ages." class="hero__media--img2">
+                        </figure >
+
+                    </div>
+                </section>
             </div>
         </header>
     </body>
