--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
     </header>
 
     <main style="height: 5000px">
+
+      <!-- service -->
       <section class="service">
         <div class="container">
           <section class="service__heading">
@@ -247,6 +249,61 @@
           </div>
          
           </div>
+        </div>
+      </section>
+
+      <!-- Work  -->
+
+      <section class="work">
+        <div class="container">
+          <h2 class="heading">How it works</h2>
+          <p class="desc work-desc">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+
+          <div class="work-list">
+            <!-- Work-item 1 -->
+              <section class="work-item">
+                  <img src="./assets/icon/search.png" alt="Search doctor" class="work-item__icon">
+                  <h3 class="work__heading">Search doctor</h3>
+                  <p class="work-item__desc">Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                  <a href="#!" class="work__cta">Learn More</a>
+              </section>
+
+              <!-- Work-item 2 -->
+              <section class="work-item">
+                <img src="./assets/icon/find-user.png" alt="Find best doctor" class="work-item__icon">
+                <h3 class="work__heading">Search doctor</h3>
+                <p class="work-item__desc">Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                <a href="#!" class="work__cta">Learn More</a>
+            </section>
+
+            <!-- Work-item 3 -->
+            <section class="work-item">
+              <img src="./assets/icon/bag.png" alt="Get treatment" class="work-item__icon">
+              <h3 class="work__heading">Search doctor</h3>
+              <p class="work-item__desc">Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+              <a href="#!" class="work__cta">Learn More</a>
+          </section>
+          </div>
+        </div>
+      </section>
+
+      <!-- Features -->
+
+      <section class="features">
+        <div class="container">
+            <div class="features-body">
+              <div class="features-media">
+                <figure> 
+                  <img src="./assets/img/features-01.jpg" alt="" class="media-img">
+                  <img src="./assets/img/features-02.jpg" alt="" class="media-img">
+                </figure>
+              </div>
+              <article class="features-info">
+                <h2 class="heading">Take back your smile with shine.</h2>
+                <p class="desc features-info__desc">If you’re missing multiple teeth due to decay, injury, or the natural aging process, dentures might be the perfect solution.</p>
+                <a href="#!" class="btn features-btn">Learn More</a>
+              </article>
+            </div>
         </div>
       </section>
     </main>
