--- a/index.html
+++ b/index.html
@@ -306,6 +306,60 @@
             </div>
         </div>
       </section>
+
+      <!-- Member -->
+
+      <section class="member">
+        <div class="container">
+            <div class="member-heading">
+              <h2 class="heading">Our virtual dentist</h2>
+              <a href="#!" class="btn member-cta">Meet our dentist</a>
+            </div>
+
+            <div class="member-list">
+
+              <!-- Member 1 -->
+              <article class="member-list__item">
+                  <figure>
+                    <img src="./assets/img/member-01.png" alt="" class="member__item--thumb">
+                  </figure>
+
+                  <h3 class="member-name">Dr. Essence Page</h3>
+                  <p class="member-addr">DDS, California - Linda University</p>
+              </article>
+
+               <!-- Member 2 -->
+               <article class="member-list__item">
+                <figure>
+                  <img src="./assets/img/member-02.png" alt="" class="member__item--thumb">
+                </figure>
+
+                <h3 class="member-name">Dr. Essence Page</h3>
+                <p class="member-addr">DDS, California - Linda University</p>
+            </article>
+
+             <!-- Member 3 -->
+             <article class="member-list__item">
+              <figure>
+                <img src="./assets/img/member-03.png" alt="" class="member__item--thumb">
+              </figure>
+
+              <h3 class="member-name">Dr. Essence Page</h3>
+              <p class="member-addr">DDS, California - Linda University</p>
+          </article>
+
+           <!-- Member 4 -->
+           <article class="member-list__item">
+            <figure>
+              <img src="./assets/img/member-04.png" alt="" class="member__item--thumb">
+            </figure>
+
+            <h3 class="member-name">Dr. Essence Page</h3>
+            <p class="member-addr">DDS, California - Linda University</p>
+        </article>
+            </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
