--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
         </header>
 
-        <main style="height: 5000px">
+        <main>
             <!-- service -->
             <section class="service">
                 <div class="container">
@@ -552,6 +552,208 @@
                     </section>
                 </div>
             </section>
+
+            <!-- News -->
+
+            <section class="new">
+                <div class="container">
+                    <div class="new__body">
+                        <section class="new__events">
+                            <h2 class="heading">Read Latest News & Events.</h2>
+                            <a href="#!" class="new__blog">Read All Blog</a>
+                            <div class="cta new__cta">
+                                <button class="cta__btn">
+                                    <svg
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentcolor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                                <button class="cta__btn">
+                                    <svg
+                                        class="arrow"
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentcolor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+                        </section>
+
+                        <article class="new__list">
+                            <!-- News Item1 -->
+
+                            <section class="new__item">
+                                <figure>
+                                    <img
+                                        src="./assets/img/new-01.jpg"
+                                        alt=""
+                                        class="new__item--thumb"
+                                    />
+                                </figure>
+                                <div class="new__item--body">
+                                    <h3 class="new__item--title">
+                                        Key Considerations for Regulatory
+                                        Compliant.
+                                    </h3>
+                                    <p class="new__item--desc">
+                                        It’s easy to think about medical care
+                                        from a narrow perspective. You go to the
+                                        hospital.
+                                    </p>
+                                    <a href="#!" class="new__item--move"
+                                        >Learn More</a
+                                    >
+                                </div>
+                            </section>
+
+                            <!-- News Item2 -->
+
+                            <section class="new__item">
+                                <figure>
+                                    <img
+                                        src="./assets/img/new-02.jpg"
+                                        alt=""
+                                        class="new__item--thumb"
+                                    />
+                                </figure>
+                                <div class="new__item--body">
+                                    <h3 class="new__item--title">
+                                        Key Considerations for Regulatory
+                                        Compliant.
+                                    </h3>
+                                    <p class="new__item--desc">
+                                        It’s easy to think about medical care
+                                        from a narrow perspective. You go to the
+                                        hospital.
+                                    </p>
+                                    <a href="#!" class="new__item--move"
+                                        >Learn More</a
+                                    >
+                                </div>
+                            </section>
+                        </article>
+                    </div>
+                </div>
+            </section>
+
+            <!-- welcome -->
+            <section class="welcome">
+                <div class="container">
+                    <h2 class="heading welcome__heading">
+                        Always welcoming new patients
+                    </h2>
+                    <p class="welcome__desc">
+                        Take control of your dental health and get the
+                        personalized care you deserve. Call (541) 772-8846 to
+                        schedule
+                    </p>
+                    <div class="welcome__cta">
+                        <a href="#!" class="btn welcome__btn">Appointment</a>
+                    </div>
+                </div>
+            </section>
         </main>
+
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <article class="footer__list">
+                    <section class="footer__logo">
+                        <a href="/">
+                            <div class="logo">
+                                <span class="logo__circle"></span>
+                                <span class="logo__text">
+                                    <span class="logo__branch">shine</span>
+                                    <span
+                                        class="logo__branch logo__branch--small"
+                                    >
+                                        smile
+                                    </span>
+                                </span>
+                            </div>
+                        </a>
+                        <p class="footer__logo--desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                    </section>
+                    <section class="footer__item">
+                        <h3 class="footer__title">Support</h3>
+                        <a href="#!" class="footer__desc">Help center</a>
+                        <a href="#!" class="footer__desc"
+                            >Account information</a
+                        >
+                        <a href="#!" class="footer__desc">About</a>
+                        <a href="#!" class="footer__desc">Contact us</a>
+                        <h3 class="footer__title">Support</h3>
+                        <a href="#!" class="footer__desc">Help center</a>
+                        <a href="#!" class="footer__desc"
+                            >Account information</a
+                        >
+                    </section>
+
+                    <section class="footer__item">
+                        <h3 class="footer__title">Support</h3>
+                        <a href="#!" class="footer__desc">Help center</a>
+                        <a href="#!" class="footer__desc"
+                            >Account information</a
+                        >
+
+                        <h3 class="footer__title">Support</h3>
+                        <a href="#!" class="footer__desc">Help center</a>
+                    </section>
+
+                    <section class="footer__item">
+                        <h3 class="footer__title">Stay In Touch</h3>
+                        <figure class="footer__social">
+                            <img src="./assets/icon/facbook.svg" alt="" />
+                            <img src="./assets/icon/twiter.svg" alt="" />
+                            <img src="./assets/icon/link.svg" alt="" />
+                        </figure>
+                        <h3 class="footer__title">Subscribe</h3>
+                        <p class="footer__desc">
+                            Subscribe our newsletter for the latest update of
+                            Dental care
+                        </p>
+
+                        <div class="footer__cta">
+                            <input
+                                type="text"
+                                class="mail"
+                                placeholder="Enter your email..."
+                            />
+
+                            <button class="footer__cta--btn">
+                                <a href="#!" class="footer__link">Subscribe</a>
+                            </button>
+                        </div>
+                    </section>
+                </article>
+
+                <div class="seperator"></div>
+                <p class="footer__desc copyright">
+                    2021 GDN. Copyright and All rights reserved.
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
